src/test/ui/unsized6.stderr
error[E0277]: the size for values of type `Y` cannot be known at compilation time
  --> $DIR/unsized6.rs:19:9
   |
LL |     let y: Y;
   |         ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `Y`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where Y: std::marker::Sized` bound
   = note: all local variables must have a statically known size

error[E0277]: the size for values of type `X` cannot be known at compilation time
  --> $DIR/unsized6.rs:17:12
   |
LL |     let _: (isize, (X, isize));
   |            ^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `X`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where X: std::marker::Sized` bound
   = note: only the last element of a tuple may have a dynamically sized type

error[E0277]: the size for values of type `Z` cannot be known at compilation time
  --> $DIR/unsized6.rs:21:12
   |
LL |     let y: (isize, (Z, usize));
   |            ^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `Z`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where Z: std::marker::Sized` bound
   = note: only the last element of a tuple may have a dynamically sized type

error[E0277]: the size for values of type `X` cannot be known at compilation time
  --> $DIR/unsized6.rs:25:9
   |
LL |     let y: X;
   |         ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `X`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where X: std::marker::Sized` bound
   = note: all local variables must have a statically known size

error[E0277]: the size for values of type `Y` cannot be known at compilation time
  --> $DIR/unsized6.rs:27:12
   |
LL |     let y: (isize, (Y, isize));
   |            ^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `Y`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where Y: std::marker::Sized` bound
   = note: only the last element of a tuple may have a dynamically sized type

error[E0277]: the size for values of type `X` cannot be known at compilation time
  --> $DIR/unsized6.rs:32:9
   |
LL |     let y: X = *x1;
   |         ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `X`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where X: std::marker::Sized` bound
   = note: all local variables must have a statically known size

error[E0277]: the size for values of type `X` cannot be known at compilation time
  --> $DIR/unsized6.rs:34:9
   |
LL |     let y = *x2;
   |         ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `X`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where X: std::marker::Sized` bound
   = note: all local variables must have a statically known size

error[E0277]: the size for values of type `X` cannot be known at compilation time
  --> $DIR/unsized6.rs:36:10
   |
LL |     let (y, z) = (*x3, 4);
   |          ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `X`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where X: std::marker::Sized` bound
   = note: all local variables must have a statically known size

error[E0277]: the size for values of type `X` cannot be known at compilation time
  --> $DIR/unsized6.rs:40:9
   |
LL |     let y: X = *x1;
   |         ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `X`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where X: std::marker::Sized` bound
   = note: all local variables must have a statically known size

error[E0277]: the size for values of type `X` cannot be known at compilation time
  --> $DIR/unsized6.rs:42:9
   |
LL |     let y = *x2;
   |         ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `X`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where X: std::marker::Sized` bound
   = note: all local variables must have a statically known size

error[E0277]: the size for values of type `X` cannot be known at compilation time
  --> $DIR/unsized6.rs:44:10
   |
LL |     let (y, z) = (*x3, 4);
   |          ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `X`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where X: std::marker::Sized` bound
   = note: all local variables must have a statically known size

error[E0277]: the size for values of type `X` cannot be known at compilation time
  --> $DIR/unsized6.rs:48:18
   |
LL | fn g1<X: ?Sized>(x: X) {}
   |                  ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `X`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where X: std::marker::Sized` bound
   = note: all local variables must have a statically known size

error[E0277]: the size for values of type `X` cannot be known at compilation time
  --> $DIR/unsized6.rs:50:22
   |
LL | fn g2<X: ?Sized + T>(x: X) {}
   |                      ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `X`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where X: std::marker::Sized` bound
   = note: all local variables must have a statically known size

error: aborting due to 13 previous errors

For more information about this error, try `rustc --explain E0277`.
